--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
   <title> My new Projects </title>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1> this line is for the test.</h1>
