--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <title> My new Projects </title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" herf="style.css">
 </head>
 <body>
   <h1> this line is for the test.</h1>
   <p> this is a paragraph for test </p>
 </body>
+</html>
