--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
   <link rel="stylesheet" herf="style.css">
 </head>
 <body>
-  <h1> this line is for the test.</h1>
-  <p> this is a paragraph for test </p>
+  <div class="terminal">
+    <div class="top bar">
+      <span class="dot red"></span>
+      <span class="dot green"></span>
+      <span class="dot yellow"></span>
+    </div>
+    <div class="content">
+      <p class="command">Who am I</p>
+    <p>Junior developer. Learning HTML, css, C, Python, JavaScript.</p>
+    <p class="command"> Skills</p>
+    <p>[HTML, css, JavaScript]</p>
+    </div>
+  </div>
 </body>
 </html>
