--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title> My new Projects </title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" herf="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="terminal">
