--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="terminal">
-    <div class="top bar">
+    <div class="top-bar">
       <span class="dot red"></span>
       <span class="dot green"></span>
       <span class="dot yellow"></span>
