Add command prompt style to text in index.html

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <span class="dot yellow"></span>
     </div>
     <div class="content">
-      <p class="command">Who am I</p>
+      <p class="command">$ Who am I</p>
     <p>Junior developer. Learning HTML, css, C, Python, JavaScript.</p>
-    <p class="command"> Skills</p>
+    <p class="command">$ Skills</p>
     <p>[HTML, css, JavaScript]</p>
     </div>
   </div>
