--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title> My new Projects </title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./style.css">
+   <script src="script.js"></script>
 </head>
 <body>
  
