--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<h1 style="color:red;">NEW MINI OS TEST</h1>
 
   <div class="desktop">
 
